# AWBotNest

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_api_full.py  test_api_summary.py
.github/workflows/: docker-build.yml  release.yml
adapters/: __init__.py
adapters/ai/: openai_adapter.py
config/: config.py
core/: __init__.py  manager.py  telegram.py
docs/: API.md  CLAUDE.md  PLUGIN_GUIDE.md  SPEC.md
filters/: custom_filters.py
infra/: __init__.py  config.py  container.py  logging.py  scheduler.py
kernel/: __init__.py  account_manager.py  activity.py  browser.py  context.py  deps.py  notification_channels.py  notifier.py  plugin_runtime.py  registry.py  state.py
libs/: command_tablepy.py  custom_client.py  leaderboard_imge.py  log.py  log_cleaner_settings.py  others.py  proxy.py  session_cleaner.py  state.py  sys_info.py  toml.py  toml_images.py  transfer_helper.py  ydx_betmodel.py  zhuque_listBackpack.py  zhuque_recycleMagicCard.py
models/: __init__.py  ai_db_model.py  alter_tables.py  transform_db_modle.py  ydx_db_modle.py
plugins/: _TEMPLATE.py
schedulers/: __init__.py
scripts/: VERSION_MANAGEMENT.md  update_version.py
tests/: test_backup.py  test_bot_defaults.py  test_log_cleaner.py  test_log_stream.py  test_notification_channels.py  test_plugin_changelog.py  test_plugin_download.py  test_plugin_repo_input.py
webui/: __init__.py  api.py  auth.py  backup.py  github_import.py  log_stream.py  repo_sync.py
(+81 files in other folders)
